backend for bulk uploads
